k8s/msr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msrsample-svc
  labels:
    app: msrsample
spec:
  type: ClusterIP
  ports:
  - port: 30080
    targetPort: 10139
  selector:
    app: msrsample
