k8s/msr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msrsample-ingress-svc
  labels:
    app: msrsample-svc
  namespace: default
  annotations:
    haproxy.org/check: "true"
    haproxy.org/forwarded-for: "true"
    haproxy.org/load-balance: "roundrobin"
    kubernetes.io/ingress.class: "haproxy"
    ingress.kubernetes.io/rewrite-target: "/"
spec:
  defaultBackend:
    service:
      name: haproxycontroller-kubernetes-ingress-default-backend
      port:
        number: 8080
  rules:
    - host: fis.smartmarket
      http:
        paths:
          - path: /msrsample
            pathType: Prefix
            backend:
              service:
                name: msrsample-svc
                port: 
                  number: 8094
          - path: /insurance/travel-insurance-service/v1/
            pathType: Prefix
            backend:
              service:
                name: travel-insurance-service
                port: 
                  number: 8082
